4_kubernetes/sundaland-frontend/service.yml
# FIXME
apiVersion: v1
kind: Service
metadata:
  name: sundaland-frontend
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: sundaland
    component: frontend
