4_kubernetes/sundaland-frontend/ingress.yml
# FIXME
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sundaland-frontend
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sundaland-frontend
            port:
              number: 80
